Update: Datenempfang, Daten senden

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,8 @@
     //Game Fragment
     <string name="dialogTitle">Wie viele Runden wollen Sie spielen?</string>
     <string name="dialogEnter">Bestätigen</string>
+    <string name="btnTeamA">Team A</string>
+    <string name="btnTeamB">Team B</string>
+    <string name="btnRepeat">Wiederholen</string>
 
 </resources>
