--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,8 +43,10 @@
     //Game Fragment
     <string name="dialogTitle">Wie viele Runden wollen Sie spielen?</string>
     <string name="dialogEnter">Bestätigen</string>
-    <string name="btnTeamA">Team A</string>
-    <string name="btnTeamB">Team B</string>
+    <string name="teamA">Team A</string>
+    <string name="teamB">Team B</string>
     <string name="btnRepeat">Wiederholen</string>
+    <string name="scoreA">Spielstand Team A: %s Punkte</string>
+    <string name="scoreB">Spielstand Team B: %s Punkte</string>
 
 </resources>
