--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,18 +31,16 @@
     <string name="fabAnleitung">Anleitung</string>
     <string name="anleitung">Anleitung...</string>
     <string name="dialog_cancel">OK</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
     <string name="menuUse">Wählen Sie einen Verwendungszweck</string>
 
 
     //Player Fragment
+    <string name="tvPlayer">Wählen Sie Spieler aus!</string>
     <string name="dialogAdd">Spieler hinzufügen</string>
     <string name="dialog_cancel2">Abbruch</string>
     <string name="dialog_ok">Ok</string>
     <string name="dialogDelete">Spieler löschen?</string>
-    <string name="btnMix">Teams??</string>
+    <string name="btnMix">Teams bilden</string>
     <string name="adTitle">Teams</string>
     <string name="posButton">Spiel starten</string>
     <string name="fill_out">Bitte ausfüllen</string>
